--- a/index.html
+++ b/index.html
@@ -72,17 +72,17 @@
         <ul>
           <li>
             <a href="">
-              <img src="/images/img1.jpg" alt="Верстка" />
+              <img src="./images/img1.jpg" alt="Верстка" />
             </a>
           </li>
           <li>
             <a href="">
-              <img src="/images/img2.jpg" alt="Дизайн" />
+              <img src="./images/img2.jpg" alt="Дизайн" />
             </a>
           </li>
           <li>
             <a href="">
-              <img src="/images/img3.jpg" alt="Подбор цвета" />
+              <img src="./images/img3.jpg" alt="Подбор цвета" />
             </a>
           </li>
         </ul>
@@ -91,22 +91,22 @@
         <h2 id="portfolio">Наша команда</h2>
         <ul>
           <li>
-            <img src="/images/img4.jpg" alt="Фото" />
+            <img src="./images/img4.jpg" alt="Фото" />
             <h3>Игорь Демьяненко</h3>
             <p lang="en">Product Designer</p>
           </li>
           <li>
-            <img src="/images/img5.jpg" alt="Фото" />
+            <img src="./images/img5.jpg" alt="Фото" />
             <h3>Ольга Репина</h3>
             <p lang="en">Frontend Developer</p>
           </li>
           <li>
-            <img src="/images/img6.jpg" alt="Фото" />
+            <img src="./images/img6.jpg" alt="Фото" />
             <h3>Николай Тарасов</h3>
             <p lang="en">Marketing</p>
           </li>
           <li>
-            <img src="/images/img7.jpg" alt="Фото" />
+            <img src="./images/img7.jpg" alt="Фото" />
             <h3>Михаил Ермаков</h3>
             <p lang="en">UI Designer</p>
           </li>
@@ -118,7 +118,7 @@
         <h2 id="contacts">Контакты</h2>
         <address>
           <a href="https://www.google.com">
-            <img src="/images/WebStudio2.svg" alt="Логотип" /> </a
+            <img src="./images/WebStudio2.svg" alt="Логотип" /> </a
           ><br />
           <span>г. Киев, пр-т Леси Украинки, 26</span><br />
           <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
